--- a/USER PAGE/tProfile.html
+++ b/USER PAGE/tProfile.html
@@ -69,13 +69,20 @@
                     <span>RM0031</span>
 
                     <span>Room Type</span>
-                    <span>Family</span>
+                    <span>Double-Deck</span>
 
                     <span>Date Check-In</span>
                     <span>December 16, 2024</span>
 
                     <span>Time Check-In</span>
                     <span>7:35 AM</span>
+
+                    <span>Number of Occupants</span>
+                    <span>4</span>
+
+                    <span>Rental Monthly Rates</span>
+                    <span style="color: rgb(228, 31, 31);">₱4,455.00</span>
+
                 </div>
 
                 
