--- a/USER PAGE/tDashboard.html
+++ b/USER PAGE/tDashboard.html
@@ -150,8 +150,8 @@
                     <div class="content">
                         <img src="image/rb_7944.png" alt="">
                         <div class="text-content">
-                            <h1>Cossy Room</h1>
-                            <p>Good news my dear Tenant! Our house has just open an additional new room for your future home.
+                            <h1>Washing Machine in the Compound</h1>
+                            <p>Good news my dear Tenant! Our house just launch another services for you to enjoy!
                                 <a href="#">Learn more.</a>
                             </p>
                         </div>
