--- a/USER PAGE/tenant.html
+++ b/USER PAGE/tenant.html
@@ -13,7 +13,7 @@
         <!-- Navigation Bar -->
         <nav class="navigator">
             <a href="javascript:void(0);" onclick="loadPage('tDashboard.html', this)" aria-label="Home"><i class='bx bx-home icon'></i></a>
-            <a href="javascript:void(0);" onclick="loadPage('tProfile.html', this)" aria-label="Profile"><i class='bx bx-user icon'></i></a>
+            <a href="javascript:void(0);" onclick="loadPage('Tenant_Profile/tProfile.html', this)" aria-label="Profile"><i class='bx bx-user icon'></i></a>
             <a href="javascript:void(0);" onclick="loadPage('ttPayments.html', this)" aria-label="Payments"><i class='bx bx-wallet icon'></i></a>
             <a href="javascript:void(0);" onclick="loadPage('tMaintenance.html', this)" aria-label="Maintenance"><i class='bx bx-wrench icon'></i></a>
             <a href="javascript:void(0);" onclick="loadPage('tNotifications.html', this)" aria-label="Notifications">
@@ -27,10 +27,19 @@
         <!-- Main Content Section -->
         <div class="main-content">
             <header class="header">
+
+                <!-- Date and Time Container -->
+                <div class="date-time" id="date-time">
+                    <div class="date"></div>
+                    <div class="time"></div>
+                </div>
+
+                <!-- Search Bar -->
                 <div class="search">
                     <input type="search" name="search" placeholder="Search..." />
                     <i class='bx bx-search icon'></i>
                 </div>
+
                 <div class="right-side">
                     <span>Hi! Welcome, <span class="username">Elmer</span></span>
                     <div class="profile">
@@ -70,9 +79,47 @@
             if (firstNavLink) {
                 loadPage('tDashboard.html', firstNavLink);
             }
+
+            // Call the function to display the current date and time
+            updateDateTime();
+            setInterval(updateDateTime, 1000); // Update every second
         };
+
+        // Function to update date and time
+        function updateDateTime() {
+            const dateTimeElement = document.getElementById("date-time");
+
+            // Get current date and time
+            const now = new Date();
+            const options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' };
+            const date = now.toLocaleDateString('en-US', options);
+            const time = now.toLocaleTimeString('en-US', { hour12: false });
+
+            // Display the date and time
+            dateTimeElement.textContent = `${date} ${time}`;
+        }
+
+        // Function to update date and time
+        function updateDateTime() {
+            const dateElement = document.querySelector('.date-time .date');
+            const timeElement = document.querySelector('.date-time .time');
+
+            // Get current date and time
+            const now = new Date();
+            const options = { weekday: 'short', year: 'numeric', month: 'short', day: 'numeric' };
+            const date = now.toLocaleDateString('en-US', options);
+            const time = now.toLocaleTimeString('en-US', { hour12: true });
+
+            // Update the date and time
+            dateElement.textContent = date;
+            timeElement.textContent = time;
+        }
+
+        // Call the function to display the current date and time
+        updateDateTime();
+        setInterval(updateDateTime, 1000); // Update every second
+
     </script>
-    
 
 </body>
 </html>
