--- a/USER PAGE/login.html
+++ b/USER PAGE/login.html
@@ -22,27 +22,33 @@
                 <h1>BHMS</h1>
             </div>
 
-            <div class="right-form">
-                <h1>LOG IN</h1>
-                <p>Got a problem with logging in? <a href="#">Click Here!</a></p>
+            <form method="POST" action="Back-End/login.php" >
+                <div class="right-form">
+                    <h1>LOG IN</h1>
+                    <p>Got a problem with logging in? <a href="#">Click Here!</a></p>
 
-                <div class="login-container">
-                    <div class="icon-container">
-                        <i class='bx bxs-envelope icon'></i>
-                        <input type="email" name="Email" id="Email" placeholder="Email Address" required>
+                    <div class="login-container">
+                        <div class="icon-container">
+                            <i class='bx bxs-envelope icon'></i>
+                            <input type="email" name="email" id="Email" placeholder="Email Address" required>
+                        </div>
                     </div>
-                </div>
 
-                <div class="login-container">
-                    <div class="icon-container">
-                        <i class='bx bxs-lock icon'></i>
-                        <input type="password" name="Password" id="password" placeholder="Password" required>
-                        <i class='bx bx-show' id="togglePassword" aria-label="Toggle password visibility"></i>
+                    <div class="login-container">
+                        <div class="icon-container">
+                            <i class='bx bxs-lock icon'></i>
+                            <input type="password" name="password" id="password" placeholder="Password" required>
+                            <i class='bx bx-show' id="togglePassword" aria-label="Toggle password visibility"></i>
+                        </div>
                     </div>
+
+                    <button class="login-button">LOG IN</button>
+                        <!-- Error Message, initially hidden -->
+                        <p class="error" id="error-message" style="color: red; display: none;  font-size: small; font-weight: 500;">Invalid username or password. Please try again.</p> 
+                        <p class="error" id="signup-error-message" style="color: red; display: none; font-size: small; font-weight: 300;"></p>
+                    <span>Forgot Password?</span>
                 </div>
-                <a href="tenant.html" class="login-button">LOG IN</a>
-                <span>Forgot Password?</span>
-            </div>
+            </form>
         </div>
     </div>
 
@@ -57,6 +63,8 @@
             togglePassword.classList.toggle('bx-hide');
         });
     </script>
+
+    <script src="Back-End/errorhandlers.js"></script>
 
 </body>
 </html>
