--- a/USER PAGE/login.html
+++ b/USER PAGE/login.html
@@ -3,16 +3,14 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
     <link rel="stylesheet" href="loginStyle.css">
     <script src="../imported_links.js" defer></script>
 </head>
-
 <body>
     <div class="wrapper">
         <div class="form">
             <div class="form-left">
-                
                 <div class="navs">
                     <a href="../ADVERTISEMENT/index.html">About Us</a>
                     <a href="">Any Concern?</a>
@@ -22,10 +20,10 @@
                 <h1>BHMS</h1>
             </div>
 
-            <form method="POST" action="Back-End/login.php" >
+            <form method="POST" action="Back-End/login.php">
                 <div class="right-form">
                     <h1>LOG IN</h1>
-                    <p>Got a problem with logging in? <a href="#">Click Here!</a></p>
+                    <p>Got a problem with logging in? <a href="../ADVERTISEMENT/register-form.html" id="clickHereLink">Click Here!</a></p>
 
                     <div class="login-container">
                         <div class="icon-container">
@@ -42,10 +40,14 @@
                         </div>
                     </div>
 
+                    <label for="rememberMe">
+                        <input type="checkbox" name="rememberMe" id="rememberMe"> Remember Me
+                    </label>
+                    
                     <button class="login-button">LOG IN</button>
-                        <!-- Error Message, initially hidden -->
-                        <p class="error" id="error-message" style="color: red; display: none;  font-size: small; font-weight: 500;">Invalid username or password. Please try again.</p> 
-                        <p class="error" id="signup-error-message" style="color: red; display: none; font-size: small; font-weight: 300;"></p>
+                    <!-- Error Message, initially hidden -->
+                    <p class="error" id="error-message" style="color: red; display: none; font-size: small; font-weight: 500;">Invalid password. Please try again.</p>
+                    <p class="error" id="signup-error-message" style="color: red; display: none; font-size: small; font-weight: 300;"></p>
                     <span>Forgot Password?</span>
                 </div>
             </form>
@@ -53,6 +55,17 @@
     </div>
 
     <script>
+        // Listen for the "Click Here!" link to hide the navigation when clicked
+        document.addEventListener("DOMContentLoaded", () => {
+            const clickHereLink = document.getElementById("clickHereLink");
+
+            if (clickHereLink) {
+                clickHereLink.addEventListener("click", function () {
+                    localStorage.setItem('hideNavigator', 'true');
+                });
+            }
+        });
+
         const togglePassword = document.getElementById('togglePassword');
         const passwordInput = document.getElementById('password');
 
@@ -65,6 +78,5 @@
     </script>
 
     <script src="Back-End/errorhandlers.js"></script>
-
 </body>
 </html>
