--- a/USER PAGE/Tenant_Dashboard/tDashboard.html
+++ b/USER PAGE/Tenant_Dashboard/tDashboard.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>USER DASHBOARD</title>
     <link rel="stylesheet" href="styletDashboard.css">
-    <script src="../imported_links.js" defer></script>
+    <script src="../../imported_links.js" defer></script>
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
 </head>
 <body>
@@ -196,7 +196,6 @@
         </section>
 
     </section>  
-    
-    <script src="calendar.js"></script>
+
 </body>
 </html>
