--- a/ADVERTISEMENT/register-form.html
+++ b/ADVERTISEMENT/register-form.html
@@ -53,6 +53,10 @@
                             <input type="email" name="email" id="Email" placeholder="Email Address" required>
                         </div>
                         <div class="input-container">
+                            <i class='bx bxs-user icon'></i>
+                            <input type="text" name="username" id="Username" placeholder="Username" required>
+                        </div>
+                        <div class="input-container">
                             <input type="password" name="password" id="Password" placeholder="Password" required>
                             <i class='bx bx-hide icon' id="togglePassword1"></i>
                         </div>
