--- a/USER PAGE/Tenant_Dashboard/tDashboard.html
+++ b/USER PAGE/Tenant_Dashboard/tDashboard.html
@@ -60,7 +60,7 @@
             <section class="maintenance">
                 <div class="maintenance-head">
                     <a href="#"><i class='bx bx-wrench icon'></i><span>MAINTENANCE REQUEST</span></a>
-                    <a href="#" class="maintenance-right-nav">See more...</a>
+                    <a href="" class="maintenance-right-nav">See more...</a>
                 </div>
                 <div class="maintenance-table">
                     <div class="maintenance-table-header">
@@ -148,7 +148,7 @@
                 <div class="whatsnew">
                     <h1>What's New?</h1>
                     <div class="content">
-                        <img src="image/rb_7944.png" alt="">
+                        <img src="../image/rb_7944.png" alt="What's New?">
                         <div class="text-content">
                             <h1>Washing Machine in the Compound</h1>
                             <p>Good news my dear Tenant! Our house just launch another services for you to enjoy!
