--- a/USER PAGE/Tenant_Notification/notif.html
+++ b/USER PAGE/Tenant_Notification/notif.html
@@ -13,81 +13,108 @@
     <div class="wrapper">
         <h1>Notification</h1>
 
-       <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
-            <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
-            <span>December 16, 2024</span>
-       </div>
-
-       <div class="notif-container">
-        <i class='bx bx-wrench icon'></i>
-        <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Fixing my Shower"</span> on July 19,2024 has been approved.</p>
-        <span>December 08, 2024</span>
-        </div>
-
+        <!-- Notification 1 -->
         <div class="notif-container">
-        <i class='bx bx-wallet icon'></i>
-        <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
-        <span>December 16, 2024</span>
-        </div>
-
-        <div class="notif-container">
-            <i class='bx bx-wrench icon'></i>
-            <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Broken Window"</span> on May 25,2024 has been dones.</p>
-            <span>December 16, 2024</span>
-        </div>
-
-        <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
+            <div class="tags">
+                <i class='bx bx-wallet icon'></i>
+                <p class="head-notif">Payment</p>
+            </div>
             <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
             <span>December 16, 2024</span>
         </div>
 
+        <!-- Notification 2 -->
         <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
-            <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
-            <span>December 16, 2024</span>
-        </div>
-
-        <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
-            <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
-            <span>December 16, 2024</span>
-       </div>
-
-       <div class="notif-container">
-            <i class='bx bx-wrench icon'></i>
+            <div class="tags">
+                <i class='bx bx-wrench icon'></i>
+                <p class="head-notif">Maintenance</p>
+            </div>
             <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Fixing my Shower"</span> on July 19,2024 has been approved.</p>
             <span>December 08, 2024</span>
         </div>
 
+        <!-- Notification 3 -->
         <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
+            <div class="tags">
+                <i class='bx bx-wallet icon'></i>
+                <p class="head-notif">Payment</p>
+            </div>
             <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
             <span>December 16, 2024</span>
         </div>
 
+        <!-- Notification 4 -->
         <div class="notif-container">
+            <div class="tags">
                 <i class='bx bx-wrench icon'></i>
-                <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Broken Window"</span> on May 25,2024 has been dones.</p>
-                <span>December 16, 2024</span>
+                <p class="head-notif">Maintenance</p>
+            </div>
+            <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Broken Window"</span> on May 25,2024 has been done.</p>
+            <span>December 16, 2024</span>
         </div>
 
+        <!-- Notification 5 -->
         <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
+            <div class="tags">
+                <i class='bx bx-wallet icon'></i>
+                <p class="head-notif">Payment</p>
+            </div>
             <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
             <span>December 16, 2024</span>
         </div>
 
+        <!-- Notification 6 -->
         <div class="notif-container">
-            <i class='bx bx-wallet icon'></i>
+            <div class="tags">
+                <i class='bx bx-wallet icon'></i>
+                <p class="head-notif">Payment</p>
+            </div>
             <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
+            <span>December 16, 2024</span>
+        </div>
+
+        <!-- Notification 7 -->
+        <div class="notif-container">
+            <div class="tags">
+                <i class='bx bx-wallet icon'></i>
+                <p class="head-notif">Payment</p>
+            </div>
+            <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
+            <span>December 16, 2024</span>
+        </div>
+
+        <!-- Notification 8 -->
+        <div class="notif-container">
+            <div class="tags">
+                <i class='bx bx-wrench icon'></i>
+                <p class="head-notif">Maintenance</p>
+            </div>
+            <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Fixing my Shower"</span> on July 19,2024 has been approved.</p>
+            <span>December 08, 2024</span>
+        </div>
+
+        <!-- Notification 9 -->
+        <div class="notif-container">
+            <div class="tags">
+                <i class='bx bx-wallet icon'></i>
+                <p class="head-notif">Payment</p>
+            </div>
+            <p>Your payment <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"₱25,000.00"</span> on July 25,2024 has been confirmed.</p>
+            <span>December 16, 2024</span>
+        </div>
+
+        <!-- Notification 10 -->
+        <div class="notif-container">
+            <div class="tags">
+                <i class='bx bx-wrench icon'></i>
+                <p class="head-notif">Maintenance</p>
+            </div>
+            <p>Your request <span class="data" style="font-weight: bold; color: #0e7c3d; font-size: 15px;">"Broken Window"</span> on May 25,2024 has been done.</p>
             <span>December 16, 2024</span>
         </div>
 
     </div>
 
-
-
 </body>
 </html>
+
