--- a/ADVERTISEMENT/aminities.html
+++ b/ADVERTISEMENT/aminities.html
@@ -68,6 +68,10 @@
                         Swimming Pool</p>
                 </div>
 
+                <div class="add-aminities">
+                    <a href="ADD/addAminities.html"><i class='bx bx-plus icon-add'></i></a>
+                </div>
+
 
 
         </div>
