--- a/ADVERTISEMENT/services.html
+++ b/ADVERTISEMENT/services.html
@@ -86,6 +86,10 @@
                     <p>On-site laundry services (washing machines, dryers) or access to laundry facilities for convenience.</p>
                   </div>
                 </div>
+
+                <div class="add-services">
+                    <a href="ADD/addServices.html"><i class='bx bx-plus icon-add'></i></a>
+                </div>
             
               </div>
         </div>
