--- a/MANAGEMENT/management.html
+++ b/MANAGEMENT/management.html
@@ -31,7 +31,7 @@
                 <i class='bx bx-bell icon'></i>
                 <span class="notification-badge">5</span> <!-- Number of notifications -->
             </a>
-            <a href="javascript:void(0);" onclick="loadPage('../ADVERTISEMENT/contact-us.html', this)" aria-label="About Us"><i class='bx bx-support icon'></i></a>
+            <a href="javascript:void(0);" onclick="loadPage('../ADVERTISEMENT/contact-us.html', this)" aria-label="About Us"><i class='bx bx-phone icon'></i></a>
             <a href="Back-End/logout.php" aria-label="Logout"><i class='bx bx-log-out icon'></i></a>
         </nav>        
 
